[gd_scene load_steps=2 format=3 uid="uid://dm1battle01aa"]

[ext_resource type="Script" uid="uid://b03naxu173g4r" path="res://scenes/ui/screens/DungeonBattleScreen.gd" id="1_battle"]

[node name="DungeonBattleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_battle")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="DungeonNameLabel" type="Label" parent="MarginContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "Sƒ±nav Zindanƒ±"

[node name="BackButton" type="Button" parent="MarginContainer/VBox/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Geri"

[node name="BattleContainer" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BattleVBox" type="VBoxContainer" parent="MarginContainer/VBox/BattleContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BattleInfoLabel" type="Label" parent="MarginContainer/VBox/BattleContainer/BattleVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Sava≈ü ba≈üladƒ±..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Spinner" type="Control" parent="MarginContainer/VBox/BattleContainer/BattleVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4

[node name="SpinnerVisual" type="Label" parent="MarginContainer/VBox/BattleContainer/BattleVBox/Spinner"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "‚öîÔ∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultPanel" type="PanelContainer" parent="MarginContainer/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="ResultVBox" type="VBoxContainer" parent="MarginContainer/VBox/ResultPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SuccessLabel" type="Label" parent="MarginContainer/VBox/ResultPanel/ResultVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "üéâ BA≈ûARI üéâ"
horizontal_alignment = 1

[node name="RewardsVBox" type="VBoxContainer" parent="MarginContainer/VBox/ResultPanel/ResultVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="BottomButtons" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="ClaimButton" type="Button" parent="MarginContainer/VBox/BottomButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "√ñD√úLLERI AL"

[node name="BackButton2" type="Button" parent="MarginContainer/VBox/BottomButtons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "YUVAYA D√ñN"
